--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.10.12",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
