--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.6",
+    "@types/react-slick": "^0.23.10",
     "dayjs": "^1.11.6",
     "moment": "^2.29.4",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4"
   },
   "devDependencies": {
