--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.6",
     "@types/react-slick": "^0.23.10",
+    "axios": "^1.2.0",
     "dayjs": "^1.11.6",
     "moment": "^2.29.4",
     "next": "13.0.0",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
