--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^4.6.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
