--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^5.0.6",
     "@types/react-slick": "^0.23.10",
     "dayjs": "^1.11.6",
+    "jotai": "^1.11.0",
     "moment": "^2.29.4",
     "next": "13.0.0",
     "react": "18.2.0",
@@ -24,7 +25,9 @@
     "react-icons": "^4.6.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "swr": "^1.3.0",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
