--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.31.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
     "swr": "^1.3.0",
