--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-slick": "^0.29.0",
+    "react-zendesk": "^0.1.13",
     "sharp": "^0.31.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
