--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-zendesk": "^0.1.13",
     "sharp": "^0.31.2",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.0",
     "swiper": "^8.4.4",
     "swr": "^1.3.0",
     "zustand": "^4.1.4"
